--- a/index.html
+++ b/index.html
@@ -2,52 +2,56 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <title>Tik Tac Toe</title>
+    <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <header>
-    <div id="title">Tik Tac Toe</div>
+    <div id="title">Tic Tac Toe</div>
     <div id="mode_box">
-      <!-- <div id="player_selection"> -->
-      <!-- <div class="player_select">Player vs. </div> -->
-      <!-- <div class="ai_select">AI</div> -->
-      <!-- <div class="player_select">Player</div> -->
-      <!-- </div> -->
-      <fieldset>
+      <fieldset id="player_selection">
         <form name="myForm" id="myForm" action="" method="GET">
           <label for="playerName">Player 1: </label>
           <input
             type="text"
+            class="players"
             id="playerName"
             name="playerName"
             placeholder="Name"
             pattern="^[a-zA-Z0-9_.-]*$"
           />
-          <button>X</button>
-          <button>O</button>
+          <button id="X" class="button">X</button>
+          <button id="X" class="button">O</button>
+
+          <div id="vs" class="players">vs.</div>
 
           <label for="playerName">Player 2: </label>
           <input
             type="text"
+            class="players"
             id="playerName"
             name="playerName"
             placeholder="Name"
             pattern="^[a-zA-Z0-9_.-]*$"
-          />
-          <button>X</button>
-          <button>O</button>
+          />   
+          <button id="X" class="button">Human</button>
+          <button id="X" class="button">AI</button>
+          <!-- <div id="player1" class="players">
+            Player 1
+            <div id="side1" class="button_div">
+              <button id="X" class="button">X</button>
+              <button id="O" class="button">O</button>
+            </div>
+          </div>
+          <div id="vs" class="players">vs.</div>
+          <div id="player2" class="players">
+            Player 2
+            <div id="side2" class="button_div">
+              <button id="AI" class="button">AI</button>
+              <button id="Human" class="button">Human</button>
+            </div>
+          </div> -->
         </form>
       </fieldset>
-      <!-- <div id="name_and_side_selection">
-                <div class="player_name">Player 1: 
-                    <div class="side_selection_X">X</div>
-                    <div class="side_selection_O">O</div>
-                </div>
-                <div class="player_name">Player 2: 
-                    <div class="side_selection_X">X</div>
-                    <div class="side_selection_O">O</div>
-                </div>
-            </div> -->
     </div>
   </header>
   <body>
@@ -64,7 +68,7 @@
       <div class="grid_child" id="grid_9">X</div>
     </div>
     <div id="restart">
-      <button id="restart_btn">Restart</button>
+      <button onclick="toggle()" id="start_btn">Start</button>
     </div>
     <script src="script.js"></script>
   </body>
