--- a/index.html
+++ b/index.html
@@ -5,70 +5,57 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <header>
-    <div id="title">Tic Tac Toe</div>
-    <div id="mode_box">
-      <fieldset id="player_selection">
-        <form name="myForm" id="myForm" action="" method="GET">
-          <label for="playerName">Player 1: </label>
-          <input
-            type="text"
-            class="players"
-            id="playerName"
-            name="playerName"
-            placeholder="Name"
-            pattern="^[a-zA-Z0-9_.-]*$"
-          />
-          <button id="X" class="button">X</button>
-          <button id="X" class="button">O</button>
-
-          <div id="vs" class="players">vs.</div>
-
-          <label for="playerName">Player 2: </label>
-          <input
-            type="text"
-            class="players"
-            id="playerName"
-            name="playerName"
-            placeholder="Name"
-            pattern="^[a-zA-Z0-9_.-]*$"
-          />   
-          <button id="X" class="button">Human</button>
-          <button id="X" class="button">AI</button>
-          <!-- <div id="player1" class="players">
-            Player 1
-            <div id="side1" class="button_div">
-              <button id="X" class="button">X</button>
-              <button id="O" class="button">O</button>
-            </div>
-          </div>
-          <div id="vs" class="players">vs.</div>
-          <div id="player2" class="players">
-            Player 2
-            <div id="side2" class="button_div">
-              <button id="AI" class="button">AI</button>
-              <button id="Human" class="button">Human</button>
-            </div>
-          </div> -->
-        </form>
-      </fieldset>
-    </div>
-  </header>
   <body>
-    <div class="text_display">Player 1 wins!</div>
-    <div id="grid_board">
-      <div class="grid_child" id="grid_1">X</div>
-      <div class="grid_child" id="grid_2">O</div>
-      <div class="grid_child" id="grid_3">X</div>
-      <div class="grid_child" id="grid_4">O</div>
-      <div class="grid_child" id="grid_5">X</div>
-      <div class="grid_child" id="grid_6">O</div>
-      <div class="grid_child" id="grid_7">X</div>
-      <div class="grid_child" id="grid_8">O</div>
-      <div class="grid_child" id="grid_9">X</div>
+    <div id="title">Tic Tac Toe</div>
+    <div id="left_body">
+      <div id="mode_box">
+        <fieldset id="player_selection">
+          <form name="myForm" id="myForm" action="" method="GET">
+            <label for="playerName">Player 1: </label>
+            <input
+              type="text"
+              class="players"
+              id="playerName"
+              name="playerName"
+              placeholder="Name"
+              pattern="^[a-zA-Z0-9_.-]*$"
+            />
+            <button id="X" class="button">X</button>
+            <button id="X" class="button">O</button>
+
+            <div id="vs" class="players">vs.</div>
+
+            <label for="playerName">Player 2: </label>
+            <input
+              type="text"
+              class="players"
+              id="playerName"
+              name="playerName"
+              placeholder="Name"
+              pattern="^[a-zA-Z0-9_.-]*$"
+            />
+            <button id="X" class="button">Human</button>
+            <button id="X" class="button">AI</button>
+          </form>
+        </fieldset>
+      </div>
+      <div id="restart">
+        <button onclick="toggle()" id="start_btn">Start</button>
+      </div>
     </div>
-    <div id="restart">
-      <button onclick="toggle()" id="start_btn">Start</button>
+    <div id="right_body">
+      <div class="text_display">Player 1 wins!</div>
+      <div id="grid_board">
+        <div class="grid_child" id="grid_1">X</div>
+        <div class="grid_child" id="grid_2">O</div>
+        <div class="grid_child" id="grid_3">X</div>
+        <div class="grid_child" id="grid_4">O</div>
+        <div class="grid_child" id="grid_5">X</div>
+        <div class="grid_child" id="grid_6">O</div>
+        <div class="grid_child" id="grid_7">X</div>
+        <div class="grid_child" id="grid_8">O</div>
+        <div class="grid_child" id="grid_9">X</div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
