Removed value from playername, was replacing the placeholder

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
               id="playerName1"
               name="playerName1"
               placeholder="Name"
-              pattern="^[a-zA-Z0-9_.-]*$"
             />
             <ul id="xo">
               <li id="x">
@@ -39,7 +38,6 @@
               id="playerName2"
               name="playerName2"
               placeholder="Name"
-              pattern="^[a-zA-Z0-9_.-]*$"
             />
             <ul id="humanAi">
               <li id="human">
@@ -66,15 +64,15 @@
     </div>
     <div id="right_body">
       <div id="grid_board">
-        <div class="grid_child" id="grid_1">X</div>
-        <div class="grid_child" id="grid_2">O</div>
-        <div class="grid_child" id="grid_3">X</div>
-        <div class="grid_child" id="grid_4">O</div>
-        <div class="grid_child" id="grid_5">X</div>
-        <div class="grid_child" id="grid_6">O</div>
-        <div class="grid_child" id="grid_7">X</div>
-        <div class="grid_child" id="grid_8">O</div>
-        <div class="grid_child" id="grid_9">X</div>
+        <div class="grid_child" id="grid_1"></div>
+        <div class="grid_child" id="grid_2"></div>
+        <div class="grid_child" id="grid_3"></div>
+        <div class="grid_child" id="grid_4"></div>
+        <div class="grid_child" id="grid_5"></div>
+        <div class="grid_child" id="grid_6"></div>
+        <div class="grid_child" id="grid_7"></div>
+        <div class="grid_child" id="grid_8"></div>
+        <div class="grid_child" id="grid_9"></div>
       </div>
     </div>
     <script src="script.js"></script>
