--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
     <div id="right_body">
       <div id="grid_board">
         <div class="grid_child" id="grid_1" mark=""></div>
-        <div class="grid_child" id="grid_2"></div>
-        <div class="grid_child" id="grid_3"></div>
-        <div class="grid_child" id="grid_4"></div>
-        <div class="grid_child" id="grid_5"></div>
-        <div class="grid_child" id="grid_6"></div>
-        <div class="grid_child" id="grid_7"></div>
-        <div class="grid_child" id="grid_8"></div>
-        <div class="grid_child" id="grid_9"></div>
+        <div class="grid_child" id="grid_2" mark=""></div>
+        <div class="grid_child" id="grid_3" mark=""></div>
+        <div class="grid_child" id="grid_4" mark=""></div>
+        <div class="grid_child" id="grid_5" mark=""></div>
+        <div class="grid_child" id="grid_6" mark=""></div>
+        <div class="grid_child" id="grid_7" mark=""></div>
+        <div class="grid_child" id="grid_8" mark=""></div>
+        <div class="grid_child" id="grid_9" mark=""></div>
       </div>
     </div>
     <script src="script.js"></script>
